# COSC483

AES/: AES  AES.c  Makefile  README.md
AES/exe/: AES
MACAttack/: README.md
MACAttack/Source/: CMakeLists.txt  macAttack.cpp
SHA1Attack/: Makefile  README.md  SHA1Attack.cpp  output.txt
SHA1Attack/exe/: SHA1Attack
SHA1Attack/matplotplusplus/: CMakeLists.txt
